feat(api): padronizar erros e proteger endpoints publicos